syntax = "proto3";
package api;

/* ------------------------------------
 *  SERVICES
 * ------------------------------------ */

service DefaultAnswerService {
    rpc Set(GetRequest) returns (Response) {}
}

/* ------------------------------------
 *  MESSAGES
 * ------------------------------------ */

message DefaultAnswer {
    string message = 1;
}

message User {
    string FirstName = 1;
    string LastName = 2;
    string Email = 3;
    string Title = 4;
}
message Ad {
    int64 advertId = 1;
    string Title = 2;
    string Description = 3;
    User User = 4;
}

/* ------------------------------------
 *  REQUESTS & RESPONSES
 * ------------------------------------ */


message GetRequest {
    int64 advertId = 1;
}

message Response {
    DefaultAnswer answer = 1;
    Ad ad = 2;
}
